--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,20 @@ async-generator==1.10
 atomicwrites==1.4.1
 attrs==22.1.0
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 chromedriverversion==0.4.0
 colorama==0.4.5
+cryptography==37.0.4
 h11==0.13.0
 idna==3.3
 iniconfig==1.1.1
 outcome==1.2.0
 packaging==21.3
+pluggy==1.0.0
 py==1.11.0
 pycparser==2.21
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
 PySocks==1.7.1
 pytest==7.1.2
